[package]
name = "etm-launcher"
version = "0.1.0"
description = "Launching an HTML file as a regular program, but with the ETM extension, which distinguishes this format and adds settings for the window"
authors = ["Vasiliy Muz vasiliy.muz@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "etm_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "image-png", "devtools"] } # "image-ico", "image-png",
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.24.0"
winreg = "0.55.0"
once_cell = "1.19"

#windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader"] }

#[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
#tauri-plugin-single-instance = "2"